QJsonArray::(const_)iterator: add the typedef for the pointer type

Mandatory as per the standard iterator requirements, was causing
compilation errors in the STL algorithms.

Task-number: QTBUG-41628
Change-Id: Iee12a3b822383f63c07e270244fd0e145a486b95
Reviewed-by: Lars Knoll <lars.knoll@digia.com>

cregit: eb05bda4f2fc1b9abe0c91d0b9e52c9633f5fff5 https://github.com/qt/qtbase/commit/eb05bda4f2fc1b9abe0c91d0b9e52c9633f5fff5